spacing issue

--- a/src/components/People.css
+++ b/src/components/People.css
@@ -135,7 +135,7 @@ html, body {
 .directors {
   display: grid;
   grid-template-columns: 165px auto;
-  margin-bottom: 300px;
+  margin-bottom: 50px;
 }
 
 .directors-box {
